# crucifix-win

./: BUILD.bat  BUILD_STATUS.md  PROJECT_STATUS.md  README.md  SETUP.md
CrucifixInjector/: fusion-injector.vcxproj
CrucifixInjector/src/base/window/: window.cpp
Loader/: CMakeLists.txt  main.cpp
Payload/: CMakeLists.txt  dllmain.cpp
dll/: CMakeLists.txt  CrucifixDLL.vcxproj  HookManager.cpp  HookManager.h  JNIHelper.cpp  JNIHelper.h  JVMTIHelper.cpp  JVMTIHelper.h  KillAura.cpp  KillAura.h  LogWindow.cpp  LogWindow.h  Module.h  ModuleManager.h  ResourceLoader.cpp  ResourceLoader.h  dllmain.cpp  hooks.cpp  keyboard_hook.cpp
dll/CrucifixDLL/x64/Release/: CrucifixDLL.dll.recipe  CrucifixDLL.iobj  CrucifixDLL.ipdb
dll/CrucifixDLL/x64/Release/CrucifixDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CrucifixDLL.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dll/detours/include/: detours.h
dll/gui/: ClickGUI.cpp  ClickGUI.h
dll/gui/hooks/: wglSwapBuffers.cpp
dll/hotspot/: hotspot.cpp  hotspot.h
dll/javahook/: javahook.h
dll/modules/: Module.h  ModuleManager.cpp  ModuleManager.h
dll/modules/combat/: KillAura.h
dll/modules/movement/: Fly.h  Speed.h  Sprint.h
dll/modules/render/: FullBright.h
dll/x64/Release/: CrucifixDLL.exp  CrucifixDLL.lib
injector/: CrucifixInjector.csproj  Injector.cs  MainForm.Designer.cs  MainForm.cs  ProcessDetector.cs  Program.cs
injector/Properties/: AssemblyInfo.cs
java/: build.gradle  build_javac.bat  settings.gradle
java/src/main/java/com/crucifix/client/: Crucifix.java  LunarBridge.java
java/src/main/java/com/crucifix/client/core/: AnimationEngine.java  CommandManager.java  ConfigManager.java  EventBus.java  ModuleManager.java
java/src/main/java/com/crucifix/client/events/: Event.java  KeyEvent.java  PacketEvent.java  RenderEvent.java  SubscribeEvent.java  UpdateEvent.java
java/src/main/java/com/crucifix/client/gui/: ClickGUI.java
java/src/main/java/com/crucifix/client/gui/animations/: Easing.java  SpringAnimation.java
java/src/main/java/com/crucifix/client/gui/components/: ModuleButton.java  Panel.java
java/src/main/java/com/crucifix/client/gui/themes/: BloodRose.java  CrucifixDark.java  CrucifixLight.java  Nebula.java  Theme.java  VoidWalker.java
java/src/main/java/com/crucifix/client/hud/: ArmorStatus.java  Arraylist.java  Direction.java  HUDComponent.java  HUDManager.java  Keystrokes.java  Notification.java  PotionStatus.java  Watermark.java
java/src/main/java/com/crucifix/client/modules/: Category.java  Module.java  Setting.java
java/src/main/java/com/crucifix/client/modules/combat/: AimAssist.java  AutoClicker.java  BowAim.java  HitBoxes.java  KillAura.java  Reach.java  RodAura.java  Velocity.java  WTap.java
java/src/main/java/com/crucifix/client/modules/exploit/: AntiVelocity.java  Disabler.java  FastUse.java  NoRotate.java  Phase.java  Scaffold.java  Timer.java  Tower.java
java/src/main/java/com/crucifix/client/modules/misc/: AntiBot.java  AutoGG.java  AutoTip.java  ChatFilter.java  MiddleClickPearl.java  ScoreboardCleaner.java  TimeChanger.java
java/src/main/java/com/crucifix/client/modules/movement/: BHop.java  FastLadder.java  Fly.java  LongJump.java  NoSlow.java  Speed.java  Sprint.java  Step.java  Strafe.java  WaterWalk.java
java/src/main/java/com/crucifix/client/modules/player/: AntiFire.java  AutoEat.java  AutoGapple.java  AutoPearl.java  AutoRespawn.java  AutoSoup.java  FastPlace.java  NoFall.java
java/src/main/java/com/crucifix/client/modules/render/: CameraClip.java  Chams.java  ESP.java  FullBright.java  Glow.java  Nametags.java  NoHurtCam.java  Tracers.java  XRay.java
